# folder_cleaner

./: .gitignore  Cargo.toml
.github/workflows/: lint.yml
src/: cli_tools.rs  configs.rs  file_system_caching.rs  logging.rs  main.rs  size_checker.rs  utils.rs
src/cleaning/: file_nuker.rs  mark_for_deletion.rs  mod.rs  track_files_for_deletion.rs
src/cli_tools/: cleaner_cli.rs  errors.rs  mod.rs  subprompts.rs  unwrap_config_groups.rs  validation.rs
src/configs/: config.rs  config_error.rs  errors.rs  mod.rs  parsing.rs  unwrap_config_groups.rs
src/file_system_caching/: folder_meta.rs
src/logging/: deletion_overview.rs  folder_tree.rs  folder_tree_helpers.rs  mod.rs  process_directory_tree.rs
src/serialisation/: project_folders.rs
