[package]
name = "folder_cleaner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [[bin]]
# name = "config"
# path = "src/configs.rs"

[dependencies]
directories = "3.0.2"
toml = "0.5.2"
serde = "1.0.136"
serde_derive = "1.0.136"
clap = "3.0"
walkdir = "2.4"
chrono = { version = "0.4.31", features = ["serde"] }

[dev-dependencies]
tempfile = "3.2.0"
