[package]
name = "folder-cleaner"
version = "0.1.0"
edition = "2021"

[dependencies]
directories = "4.0.1"
toml = "0.5.2"
serde = "1.0.136"
serde_derive = "1.0.136"
clap = { version = "4.5.4", features = ["derive"] }
walkdir = "2.4"
chrono = { version = "0.4.31", features = ["serde"] }
inquire = "0.7.4"

[dev-dependencies]
tempfile = "3.2.0"
